module(
    name = "aspect_rules_py__mlflow__bug",
    version = "1.0.0",
)

bazel_dep(name = "aspect_rules_py", version = "1.6.3")
bazel_dep(name = "rules_python", version = "1.6.0")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.12",
    requirements_lock = "//:requirements.txt",
)
use_repo(pip, "pip")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    ignore_root_user_error = True,
    is_default = True,
    python_version = "3.12",
)
use_repo(python, "python_3_12")
